--- a/package.json
+++ b/package.json
@@ -22,11 +22,11 @@
     "server-only": "^0.0.1"
   },
   "devDependencies": {
-    "@types/node": "^20",
-    "@types/react": "^18",
+    "@types/node": "20.16.10",
+    "@types/react": "18.3.11",
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "14.2.1",
-    "typescript": "^5"
+    "typescript": "5.6.2"
   }
 }
